examples/test/testpolicy3775.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3775
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key41: value16
      key13: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value17
          key14: value12
          key15: value47
      podSelector:
        matchLabels:
          key0: value36
